--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,67 @@
 body{
-    background-color: rgb(143, 201, 157);
+    background-color: white;
     color: #408e09;
     margin: 0;
     padding: 0;
 }
+ 
+
 .container{
             
     display: flex;
     min-height: 100vh;
+
 }
+.body-content{
+    color: rgb(5, 98, 32);
+    align-items: center;
+    text-align: center;
+    padding-top: 222px;
+    font-size: 80px;
+    
+}
+
+.new{
+    font-size: 50px;
+    text-align: center;
+    color: #0b8204;
+    
+
+}
+.image-content{ 
+    align-self: center;
+    align-items: center;
+    text-align: center;
+    border-image: auto;
+    height: 185px;
+    width: 185px;
+
+}
+.course{
+    
+    justify-content: center;
+    align-items: center;
+    border-color: #03591a;
+    text-align: center;
+    border-color: #408e09;
+    background-color: #dadddb;
+    font-size:40px;
+
+}
+.search{
+    align-items: center;
+    text-align: center;
+    padding-top: 100px;
+    font-size:40px ;
+    
+}
+.search-content{
+    align-items: center;
+    text-align:center;
+    font-size: 33px;
+
+}
+
 .sidebar{
     background-color:#6eb385;
     width: 200px;
@@ -25,14 +78,16 @@ body{
     color: black;
 }
 .active-menu{
-    background-color: #32832e;
+    background-color: #0b8204;
 }
 .menu-items:hover{
-    background-color:#408e09;
+    background-color:#b1c8a1;
 }
 .menu-icons{
-    height: 20px;
+    height: 45px;
 }
+
+
 .menu-text{
     margin: 5px;
     
@@ -53,23 +108,42 @@ body{
     display: none;
 }
 .bottom-menu-icons{
-    background-color: rgb(64, 179, 41);
+    background-color: rgb(248, 254, 247);
     margin: 5px;
     height: 30px;
     padding: 5px;
     border-radius: 5px;
 }
+
+
 .bottom-menu-icons-active{
-    background-color: #41d97b;
+    background-color: #03591a;
 }
  /* small devices */
- @media screen and (max-width: 599px){
+ @media screen and (max-width: 600px){
     .sidebar{
         display: none;
     }
     .bottom-navigation-bar{
         display: flex;
         justify-content: space-around;
+
+    }
+    .bottom-menu-icons{
+        height: 25px;
+        width: 25px;
+    }
+    .body{
+        size: 24px;
+    }
+    .body-content{
+        font-size: 25px;
+    }
+    .new{
+        font-size: 25px;
+    }
+    .course{
+        font-size: 39px;
     }
 }
  /* normal devices */
